Fix: Wrapping in Toolbars
Wrapping was causing the bottom halves of toolbar buttons to be cut off when panes were resized past a certain point.
Instead, buttons now remain on one line so that they overflow horizontally and are hidden/revealed by pane resizing in a more intuitive way.

--- a/css/ncoda/toolbars_content_areas.less
+++ b/css/ncoda/toolbars_content_areas.less
@@ -41,6 +41,7 @@
     font-weight: 300;
     color: @base-text-color;
     overflow: hidden;
+    white-space: nowrap;
     z-index: 2;
 
     h1, h2, h3, h4, h5, h6 {
